# stock-fund-analysis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  data_fetcher.py  data_processor.py  llm_client.py  logger.py
